[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautilus-tradestation"
version = "0.1.0"
description = "TradeStation adapter for NautilusTrader — community-contributed integration"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "ltamagnone" },
]
keywords = [
    "trading",
    "algorithmic-trading",
    "nautilus-trader",
    "tradestation",
    "futures",
    "equities",
    "options",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "nautilus_trader>=1.200",
    "httpx>=0.27",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/ltamagnone/nautilus-tradestation"
Repository = "https://github.com/ltamagnone/nautilus-tradestation"
Issues = "https://github.com/ltamagnone/nautilus-tradestation/issues"

[tool.hatch.build.targets.wheel]
packages = ["nautilus_tradestation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
